feat: route for getting claim queue
